--- a/style.scss
+++ b/style.scss
@@ -3,17 +3,17 @@ $fg-color: #{"@theme_fg_color"};
 $bg-color: #{"@theme_bg_color"};
 
 window.Bar {
-    background: transparent;
-    color: $fg-color;
-    font-weight: bold;
-    // min-width: 1800px;
+  background: transparent;
+  color: $fg-color;
+  font-weight: bold;
+  // min-width: 1800px;
 
-    >centerbox {
-      background: $bg-color;
-      border-radius: 10px;
-      min-height: 10px;
-      border: 3px solid rgba($color: #000000, $alpha: 0.8);
-      padding: 2px;
-      margin: 8px
-    }
+  >centerbox {
+    background: rgba($color: #ffffff, $alpha: 0.9);
+    border-radius: 6px;
+    min-height: 10px;
+    border: 1px solid rgba($color: #ffffff, $alpha: 1);
+    padding: 2px;
+    margin: 8px
+  }
 }
