--- a/style.scss
+++ b/style.scss
@@ -3,17 +3,23 @@ $fg-color: #{"@theme_fg_color"};
 $bg-color: #{"@theme_bg_color"};
 
 window.Bar {
-  background: transparent;
+  all: unset;
+  // background: transparentize($color: #000000, $amount: 1);
   color: $fg-color;
-  font-weight: bold;
+  font-weight: 600;
+  font-family: 'SF Pro Display';
   // min-width: 1800px;
+  margin: 8px;
 
   >centerbox {
-    background: rgba($color: #ffffff, $alpha: 0.9);
+    background: rgba($color: #eeeeee, $alpha: 0.85);
     border-radius: 6px;
     min-height: 10px;
-    border: 1px solid rgba($color: #ffffff, $alpha: 1);
+    border: 2px solid rgba($color: #ffffff, $alpha: 1);
     padding: 2px;
-    margin: 8px
+
+    >time {
+      text-shadow: 0px 2px 4px #666666;
+    }
   }
 }
